[tool.poetry]
name = "sea-invest"
version = "0.1.0"
description = "SEA-Invest: Self-Evolving Agentic Investment Workflow based on Howard Marks' Philosophy"
authors = ["SEA-Invest Team"]
readme = "README.md"
packages = [{include = "sea_invest"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2"
langchain = "^0.3"
langchain-openai = "^0.2"
langchain-anthropic = "^0.2"
langchain-google-genai = "^1.0"
langchain-community = "^0.3"
asyncpg = "^0.30"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.13"
pydantic = "^2.8"
pydantic-settings = "^2.4"
httpx = "^0.27"
aiohttp = "^3.10"
tiktoken = "^0.8"
numpy = "^1.26"
pandas = "^2.2"
chromadb = "^0.5"
faiss-cpu = "^1.8"
tenacity = "^9.0"
structlog = "^24.4"
rich = "^13.8"
python-dotenv = "^1.0"
feedparser = "^6.0"
beautifulsoup4 = "^4.12"
lxml = "^5.3"
yfinance = "^0.2"
fredapi = "^0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
black = "^24.8"
ruff = "^0.6"
mypy = "^1.11"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
